<resources>
    //pocetna
    <string name="app_name" translatable="false">Blank Space</string>
    <string name="subtitle_default">Complete the song lyrics</string>
    <string name="welcome_description">Have fun and test your music knowledge!</string>
    <string name="headline_choose_mode">Choose Game Mode</string>
    <string name="btn_offline_play">Play Offline</string>


    //login
    <string name="title_login">Login</string>
    <string name="textField_username">Username</string>
    <string name="textField_password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="login_no_account">Don\'t have an account? </string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_continue_as_guest">Continue as a guest</string>
    <string name="divider_or">OR</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_missing_information">Missing information!</string>

    //registracija
    <string name="title_signUp"> Sign up</string>
    <string name="registration_already_have_account">Already have an account? </string>
    <string name="registration_log_in"> Log in</string>
    <string name="registration_button"> Register</string>
    <string name="registration_full_name_message">First and last name with a space</string>

    <string name="welcome_msg">Welcome!</string>
    <string name="rules_btn">Game Rules</string>

    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="secret_question">Account recovery question</string>
    <string name="secret_answer">Answer to the question</string>

    //zaboravljena lozinka
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_conf_answer">Confirm answer</string>
    <string name="forgot_password_message_information">You have not entered an answer!</string>
    <string name="forgot_password_no_questions">No questions</string>

    //zaboravljena lozinka pitanje
    <string name="forgot_password_question_username">Enter your username to set up your security question.</string>
    <string name="forgot_password_question_ask">Ask a question</string>
    <string name="forgot_password_username_req">Username is required!</string>

    //promena lozinke
    <string name="change_password">Change Password</string>
    <string name="change_password_enter_new_password">Enter your new password.</string>
    <string name="change_password_new_password">New Password</string>
    <string name="change_password_confirm_password">Confirm Password</string>
    <string name="change_password_change_password">Change Password</string>
    <string name="password_answer">Answer</string>

    //moj profil
    <string name="game_rules">Game Rules</string>
    <string name="logout">Logout</string>

    //rang lista
    <string name="rank_leaderboard">Leaderboard 🏆</string>
    <string name="rank_rank">Rank</string>
    <string name="rank_player">Player</string>
    <string name="rank_points">Points</string>


    //admin
    <string name="artists_overview">Artists Overview</string>
    <string name="list_of_all_artists">A complete list of all artists in the system.</string>
    <string name="error">Error</string>
    <string name="no_artists_found">No artists found.</string>
    <string name="activity">Activity</string>
    <string name="no_registered_users">No registered users.</string>
    <string name="user_overview">User Overview</string>
    <string name="list_of_all_users">A complete list of all users in the system.</string>
    <string name="songs_overview">Songs Overview</string>
    <string name="list_of_all_songs">A complete list of all songs in the system by artist.</string>
    <string name="rooms_overview">Rooms Overview</string>
    <string name="list_of_all_rooms">A complete list of all rooms in the system.</string>
    <string name="lyrics_overview">Lyrics Overview</string>
    <string name="list_of_all_lyrics">A complete list of all lyrics in the system by song.</string>
    <string name="genres_overview">Genres Overview</string>
    <string name="list_of_all_genres">A complete list of all genres in the system.</string>

</resources>